SDIT-2685: ✨ New JPA get transactions endpoint (#2392)